--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body {
 }
 
 .svg {
-	margin: 0 10px;
+	margin: 0 40px;
 	/*width:1900px;
 	height:400px;
 	overflow: visible;
@@ -51,7 +51,7 @@ body {
 }*/
 
 .INPR {
-	fill: #e2f442;
+	fill: #3a2d2f;
 }
 
 .INAN {
