--- a/css/main.css
+++ b/css/main.css
@@ -119,5 +119,6 @@ g.brush > .resize {
 .room-filter {
 	display: inline-block;
 	padding: 10px 20px;
-	font-size: 0;
+	font-size: 10px;
+	text-decoration: none;
 }
